adjusted employment buttons

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -323,6 +323,7 @@ body {
   margin-left: 20px;
 }
 .employment-content-right {
+  
   width:65%;
   margin-left: auto;
   margin-right: auto;
@@ -335,8 +336,8 @@ body {
   background-color: rgba(19, 18, 18, 0.726);
 }
 .employment-button-box{
-  width: 400px;
   display: flex;
+  width: 400px;
   bottom: 0;
   margin: 10px auto 10px auto;
   padding: 4px 0;
@@ -382,13 +383,18 @@ body {
   font-size: 1rem;
   color: #f8f8f3;
 }
-.E1, .E2, .E3, .E4, .E5, .E6 {
-  width:90%;
-  max-height: 350px;
+.E1, .E2, .E3, .E4, .E5, .E6{
+  width:95%;
+  margin-left: auto;
+  margin-right: auto;
+  height: 550px;
   display: none;
   z-index: 1;
   text-align: left;
 }
+
+
+
 .E1, .E2, .E3, .E4, .E5, .E6 h2 {
   color: #f8f8f3;
   font-size: 1.2rem;
