--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -5,8 +5,8 @@
   	background-position: center;
   	background-size: cover;
 	font-size: 100%;
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	height: 100%;
 }
 *{
 	box-sizing: border-box;
