--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -5,8 +5,8 @@
   	background-position: center;
   	background-size: cover;
 	font-size: 100%;
-	width: 100%;
-	height: 100%;
+	width: 2400px;
+	height: 100vh;
 }
 *{
 	box-sizing: border-box;
@@ -18,8 +18,8 @@
   margin-left: auto;
   margin-right: auto;
   background-color:rgba(245, 249, 247, 0.762);
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 .title {
   padding-top: 30px;
