adjsted box widths

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -5,7 +5,7 @@
   	background-position: center;
   	background-size: cover;
 	font-size: 100%;
-	width: 2400px;
+	width: 100vw;
 	height: 100vh;
 }
 *{
@@ -43,7 +43,7 @@
 }
 
 .landing-content-box{
-  width: 800px;
+  width: 750px;
   display: flex;
   margin: 50px auto;
   padding: 12px 0;
