--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -18,8 +18,8 @@
   margin-left: auto;
   margin-right: auto;
   background-color:rgba(245, 249, 247, 0.762);
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
 }
 .title {
   padding-top: 30px;
@@ -43,7 +43,7 @@
 }
 
 .landing-content-box{
-  width: 750px;
+  width: 700px;
   display: flex;
   margin: 50px auto;
   padding: 12px 0;
