--- a/resources/css/contact.css
+++ b/resources/css/contact.css
@@ -55,7 +55,10 @@
 	width: 102%;
 }
 .title {
-	width: 100%;
+	margin-left: auto;
+	margin-right: auto;
+	width: 95%;
+	height: 80px;
 	display: flex;
 	flex-direction: row;
 }
@@ -67,11 +70,8 @@
 	font-size: 1.2rem;
 	font-weight: 600;
 	text-align: center;
-	margin-left: 10px;
 }
 #contact-title {
-	margin-left: auto;
-	margin-right: auto;
 	width: 600px;
 	line-height: 1.2;
 }
@@ -81,7 +81,7 @@
 	color: moccasin;
 	text-align: center;
 }
-.contact.buttons {
+.contact-buttons {
 	width: 100%;
 	height: 80px;
 	display: flex;
