--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -15,9 +15,11 @@
 	padding: 0;
 }
 .landing-box-front {
-  margin-left: auto;
-  margin-right: auto;
   background-color:rgba(245, 249, 247, 0.762);
+  background-repeat: no-repeat; 
+  	background-attachment: fixed;
+  	background-position: center;
+  	background-size: cover;
   width: 100vw;
   height: 100vh;
 }
