--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,9 +1,9 @@
 :root {
   background-image: url(../images/Aus.jpeg);
 	background-repeat: no-repeat; 
-  	background-attachment: fixed;
-  	background-position: center;
-  	background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
 	font-size: 100%;
 	width: 100vw;
 	height: 100vh;
@@ -14,18 +14,22 @@
 	margin: 0;
 	padding: 0;
 }
-.landing-box-front {
-  background-color:rgba(245, 249, 247, 0.762);
-  background-repeat: no-repeat; 
-  	background-attachment: fixed;
-  	background-position: center;
-  	background-size: cover;
+.page-container {
   width: 100vw;
   height: 100vh;
 }
+.landing-box-front {
+  background-color:rgba(245, 249, 247, 0.762);
+  background-repeat: no-repeat; 
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  min-width: 745px;
+  height: 100%;
+}
 .title {
   padding-top: 30px;
-  width: 750px;
+  width: 745px;
   height: auto;
   text-align: center;
   color: black;
@@ -48,8 +52,11 @@
 
 .landing-content-box{
   width: 700px;
+  height: 1000px;
   display: flex;
-  margin: 50px auto;
+  margin-top: 50px;
+  margin-left: auto;
+  margin-right: auto;
   padding: 12px 0;
   background: linear-gradient(#454f59 50%, #6b6954 50%);
   border-radius: 20px;
