--- a/resources/css/employment.css
+++ b/resources/css/employment.css
@@ -5,8 +5,8 @@
 	background-position: center;
 	background-size: cover;
 	font-size: 100%;
-	width: 100%;
-	height: 100%;
+	width: 100vw;
+	height: 100vh;
 }
 
 *{
@@ -15,11 +15,15 @@
 	margin: 0;
 	padding: 0;
 }
+.main-container {
+	width: 100vw;
+	height: 100vh;
+}
 .emp-content-box{
 	width: 750px;
 	height: 1100px;
 	display: flex;
-	margin: 50px auto;
+	margin: 20px auto;
 	padding: 12px 0;
 	background: linear-gradient(#454f59 50%, #6b6954 50%);
 	border-radius: 20px;
@@ -28,7 +32,7 @@
 }
 .emp-content-panel {
 	max-width: 150px;
-	height: 100px;
+	height: 200px;
 	margin: auto;
 	padding: 10px;
 	background-color: #8c8b85;
