--- a/resources/css/portfolio.css
+++ b/resources/css/portfolio.css
@@ -14,10 +14,14 @@
 	margin: 0;
 	padding: 0;
 }
+.main-container {
+	width: 100vw;
+	height: 100vh;
+}
 
 .port-content-box{
 	width: 750px;
-	height: 1150px;
+	height: 1100px;
 	display: flex;
 	margin: 10px auto 20px auto;
 	padding: 12px 0;
@@ -28,7 +32,7 @@
 }
 .port-content-panel {
 	max-width: 150px;
-	height: 100px;
+	height: 200px;
 	margin: auto;
 	padding: 10px;
 	background-color: #8c8b85;
@@ -49,9 +53,8 @@
 }
 .port-banner-box{
 	width: 100%;
-	height: 110px;
+	height: 120px;
 	display: flex;
-	margin-top: -20px;
 	margin-left: auto;
 	margin-right: auto;
 	background: linear-gradient(#53718f 50%, #687c7e 50%);
@@ -62,9 +65,9 @@
 .port-banner-inside {
 	display: flex;
 	flex: 1;
-	width: 95%;
-	margin-left: 10px;
-	margin-bottom: 10px;
+	width: 70%;
+	height: 90px;
+	margin: 10px;
 	height: 110px;
 	background-color: #000;
 	border-radius: 20px;
@@ -180,6 +183,7 @@
 }
   .port-content-box-bottom{
 	width: 100%;
+	height: 690px;
 	display: flex;
 	margin: 5px auto 0 auto;
 	padding: 12px 0;
@@ -192,14 +196,14 @@
 	display: flex;
 	flex: 1;
 	margin: 10px auto 10px 15px;
-	height: 730px;
+	height: 650px;
 	background-color: #000;
 	border-radius: 20px;
 	padding: 1.5rem 1rem;
   }
   .port-content-panel2 {
 	width: 20px;
-	height: 60px;
+	height: 300px;
 	margin: auto;
 	padding: 10px 0 0 1%;
 	background-color: #2626dc;
