--- a/resources/css/employment.css
+++ b/resources/css/employment.css
@@ -135,5 +135,9 @@ h5 {
 	font-weight: 500;
 	text-align: center;
 }
-  
+@media (max-width: 1200px){
+	.emp-content-box {
+		width: 98%;
+  }
+} 
  
