--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -28,7 +28,8 @@
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
-  min-width: 745px;
+  overflow: hidden;
+  width: 100%;
   height: 100%;
 }
 .title {
@@ -55,7 +56,7 @@
 }
 
 .landing-content-box{
-  width: 700px;
+  width: 755px;
   height: 1000px;
   display: flex;
   margin-top: 50px;
@@ -146,6 +147,6 @@ font-size: 1.4rem;
 }
 @media (max-width: 1170px){
 	.landing-content-box {
-    width: 100%;
+    width: 100vw;
   }
 }
