--- a/resources/css/portfolio.css
+++ b/resources/css/portfolio.css
@@ -4,6 +4,7 @@
 	background-attachment: fixed;
 	background-position: center;
 	background-size: cover;
+	overflow: hidden;
 	font-size: 100%;
 	width: 100vw;
 	height: 100vh;
@@ -15,13 +16,13 @@
 	padding: 0;
 }
 .main-container {
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	height: 100%;
 }
 
 .port-content-box{
 	width: 750px;
-	height: 1100px;
+	height: 1180px;
 	display: flex;
 	margin: 10px auto 20px auto;
 	padding: 12px 0;
@@ -53,12 +54,12 @@
 }
 .port-banner-box{
 	width: 100%;
-	height: 120px;
+	height: 130px;
 	display: flex;
 	margin-left: auto;
 	margin-right: auto;
 	background: linear-gradient(#53718f 50%, #687c7e 50%);
-	border-radius: 20px 20px 0 0;
+	border-radius: 20px;
 	overflow: hidden;
 	position: relative;
 }
@@ -66,9 +67,9 @@
 	display: flex;
 	flex: 1;
 	width: 70%;
-	height: 90px;
+	height: 80px;
 	margin: 10px;
-	height: 110px;
+	height: 100px;
 	background-color: #000;
 	border-radius: 20px;
 	padding: 1.5rem 1rem;
@@ -96,49 +97,11 @@
 	text-align: center;
 }
   
-.port-bar-top {
-	width: 668px;
-	margin-left: 15px;
-	margin-right: auto;
-	display: flex;
-	height: 22px;
-}
-.bar-top-1, .bar-top-2, .bar-top-3, .bar-top-4, .bar-top-5{
-	height: 22px;
-	border-right: 5px solid #000;
-}
-.bar-top-1{
-	transition: width 1s;
-}
-.bar-top-1 {
-	margin-left: -15px;
-	width: 20%;
-	background-color: #687c7e;
-	border-radius: 0 0 0 22px;
-}
-.bar-top-2 {
-	width: 92px;
-	background-color: #e4dd90;
-}
-.bar-top-3 {
-	width: 30%;
-	background-color: #b1cce6;
-}
-.bar-top-4 {
-	width: 35%;
-	background-color: #afafd2;
-}
-  
-.bar-top-5 {
-	width: 30%;
-	background-color: #687c7e;
-	border-radius: 0 0 22px 0;
-	margin-right: auto;
-}
+
   
 .port-content-box-in{
 	width: 100%;
-	height: 200px;
+	height: 250px;
 	display: flex;
 	margin: 5px auto 0 auto;
 	padding: 12px 0;
@@ -155,7 +118,7 @@
 	flex: 1;
 	margin-left: 2%;
 	margin-bottom: 10px;
-	height: 170px;
+	height: 220px;
 	background-color: #000;
 	border-radius: 20px 20px 20px 20px;
 	padding: 1.5rem 1rem;
@@ -183,7 +146,7 @@
 }
   .port-content-box-bottom{
 	width: 100%;
-	height: 690px;
+	height: 730px;
 	display: flex;
 	margin: 5px auto 0 auto;
 	padding: 12px 0;
@@ -196,7 +159,7 @@
 	display: flex;
 	flex: 1;
 	margin: 10px auto 10px 15px;
-	height: 650px;
+	height: 690px;
 	background-color: #000;
 	border-radius: 20px;
 	padding: 1.5rem 1rem;
