--- a/resources/css/education.css
+++ b/resources/css/education.css
@@ -86,7 +86,7 @@
 	margin: 5px auto 0 auto;
 	padding: 12px 0;
 	background: linear-gradient(#e6e2b1 50%, #b1cce6 50%);
-	border-radius: 20px 20px 20px 20px;
+	border-radius: 20px;
 	overflow-x: hidden;
 	position: relative;
 }
@@ -113,7 +113,8 @@
   	height: 60px;
  	background-image: url(../images/smallbutton.png);
   	border-radius: 30px;
-  	border: 2px solid black;  
+  	border: 2px solid black; 
+	font-size: 0; 
 }
 .c-b-b h4 {
 	margin-left: -30px;
@@ -190,14 +191,26 @@
 		justify-content: center;
 		overflow-x: hidden;
 	  }
-	  .buttons {
-		  
-	  }
+	 
+	.buttons {
+		justify-content: space-around; 
+		
+	}
 	  .c-b-b {
-		width: 200px;
+		text-align: center;
+		width: 100px;
+		height: 50px;
+		background-image: none;
+	   	background-color: #758594;
+		border-radius: 30px;
+		border: 2px solid black;
+		font-weight: bold;
+		font-size: 1.3rem; 
+
 	}
 	.c-b-b h4 {
-		font-size: 1rem;
+		font-size: 0;
+		color: #758594;
 	}
 	} 
 
