--- a/resources/css/employment.css
+++ b/resources/css/employment.css
@@ -85,7 +85,6 @@
 #employment-content {
 	width:650px;
 	height: 950px;
-	border: 2px solid white;
 }
 #button-boxes {
 	width: 226px;
@@ -134,6 +133,9 @@ h5 {
 	font-weight: 500;
 	text-align: center;
 }
+
+
+
 @media (max-width: 1170px){
 .emp-content-box {
 	width: 95vw;
@@ -150,10 +152,40 @@ h5 {
 #employment-title h3 {
 	font-size: 1.9rem;
 }
-#one {
-	font-size: 1rem;
-	line-height: 1.2rem;
+.employment-content-box {
+	flex-direction: column;
 }
-
+#employment-content {
+	text-align: left;
+	width: 90%;
+	height: auto;
+}
+#one {
+	margin-top: 30px;
+	font-size: 1.3rem;
+	line-height: 1.7rem;
+	letter-spacing: 0.1rem;
+}
+#button-boxes {
+	width: 100%;
+	display:flex;
+	flex-direction: row;	
+}
+  .e-b-b {
+	text-align: center;
+	width: 110px;
+	height: 60px;
+	background-image: url(../images/tinybutton.png);
+	font-size: 0.8rem; 
+	color: whitesmoke;
+	overflow: hidden;
+}
+.e-b-b h4 {
+	font-size: 0;
+}
+h5 {
+	font-size: 0;
+}
 } 
+
  
