--- a/resources/css/employment.css
+++ b/resources/css/employment.css
@@ -158,13 +158,16 @@ h5 {
 #employment-content {
 	text-align: left;
 	width: 90%;
-	height: auto;
+	height: 100%;
+	
 }
 #one {
 	margin-top: 30px;
 	font-size: 1rem;
 	line-height: 1.3rem;
 	letter-spacing: 0.1rem;
+
+	
 }
 #button-boxes {
 	width: 100%;
