--- a/resources/css/education.css
+++ b/resources/css/education.css
@@ -15,8 +15,8 @@
 	padding: 0;
 }
 .certification-box {
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	height: 100%;
 
 }
 .cert-content-box{
@@ -172,19 +172,18 @@
 }
 @media (max-width: 1170px){
 	.cert-content-box {
-		width: 95vw;
-		margin-right: 20px;
+		margin-left: auto;
+		margin-right: auto;
+		width: 100%;
+		overflow-x: hidden;
 	}
 	.cert-content-inside {
-		width: 70%;
-	}
-	#cert-title {
-		width: 900px;
-		text-transform: uppercase;
-		line-height: 1.2;
+		width: 98%;
+		margin-left: 5px;
+		margin-right: 5px;
 	}
 	#cert-title h3 {
-		font-size: 1.9rem;
+		font-size: 1.4rem;
 	}
 	.cert-content-text-bottom {
 		width: 750px;
