--- a/Quiz/firstLast.css
+++ b/Quiz/firstLast.css
@@ -37,7 +37,7 @@ h4 {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	width: 550px;
+	width: 650px;
 	height: 900px;
 	margin-left: auto;
 	margin-right: auto;
@@ -146,9 +146,10 @@ h4 {
 	box-shadow: none;
 	transform: none;
 }
-@media (max-width: 1200px){
+@media (max-width: 1170px){
 	.container {
 		width: 98%;
+		height: 100%;
   }
 }
   
