--- a/Quiz/firstLast.css
+++ b/Quiz/firstLast.css
@@ -32,16 +32,32 @@ h4 {
 
 /* UTILITIES */
 .container {
-	margin-top: 100px;
+	width: 100%;
+	height: 100vh;
+	overflow: hidden;
+}
+.inner-container{
+	margin-top: 50px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	width: 650px;
-	height: 900px;
+	width: 750px;
+	height: 100vh;
 	margin-left: auto;
 	margin-right: auto;
 }
+.inner-containere{
+	margin-top: 0;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 750px;
+	height: 100vh;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 .title {
 	width: 100%;
 	height: auto;
@@ -62,10 +78,9 @@ h4 {
 	margin-left: auto;
 	margin-right: auto;
 	height: 80px;
-	width: 70%;
+	width: 300px;
 	background-color: whitesmoke;
 	margin-bottom: 1rem;
-	
 	border: 0.2rem solid #333;
 	box-shadow: 0 0.1rem 1.4rem 0 rgba(86, 185, 235, 0.5) ;
 	text-align: center;
@@ -74,7 +89,7 @@ h4 {
 	margin-left: auto;
 	margin-right: auto;
 	height: 80px;
-	width: 70%;
+	width: 300px;
 	background-color: whitesmoke;
 	margin-bottom: 1rem;
 	border: 0.2rem solid #333;
@@ -122,7 +137,7 @@ h4 {
 .btn {
 	font-size: 2.8rem;
 	padding: 2rem 0;
-	width: 70%;
+	width: 300px;
 	text-align: center;
 	border: 0.2rem solid rgb(3, 28, 247);
 	margin-bottom: 3rem;
@@ -147,10 +162,22 @@ h4 {
 	transform: none;
 }
 @media (max-width: 1170px){
-	.container {
-		width: 98%;
+
+	.inner-containere{
+		margin-top: 0;
+		width: 450px;
 		height: 100%;
-  }
+	}
+	.inner-container{
+		width: 450px;
+		height: 100%;
+	}
+	#home {
+		margin-top: -80px;
+	}
+	#end {
+		margin-top: -120px;
+	}
 }
   
   
