--- a/resources/css/employment.css
+++ b/resources/css/employment.css
@@ -21,7 +21,7 @@
 }
 .emp-content-box{
 	width: 755px;
-	height: 1100px;
+	height: auto;
 	display: flex;
 	margin: 20px auto;
 	padding: 12px 0;
@@ -136,14 +136,15 @@ h5 {
 
 
 
-@media (max-width: 1170px){
+@media (max-width: 570px){
 .emp-content-box {
-	width: 95%;
-	height: 100%;
-	margin-right: 20px;
+	width: 100%;
+	overflow: hidden;
 }
 .emp-content-inside {
-	width: 70%;
+	margin-left: 1px;
+	width: 100%;
+	overflow: hidden;
 }
 #employment-title {
 	width: 900px;
@@ -171,18 +172,16 @@ h5 {
 	
 }
 #button-boxes {
-	width: 100%;
 	display:flex;
-	flex-direction: row;	
+	
 }
   .e-b-b {
 	text-align: center;
-	width: 110px;
 	height: 60px;
 	background-image: url(../images/tinybutton.png);
 	font-size: 1rem; 
 	color: whitesmoke;
-	overflow: hidden;
+	
 }
 .e-b-b h4 {
 	font-size: 0;
