--- a/resources/css/employment.css
+++ b/resources/css/employment.css
@@ -4,6 +4,7 @@
 	background-attachment: fixed;
 	background-position: center;
 	background-size: cover;
+	overflow: hidden;
 	font-size: 100%;
 	width: 100vw;
 	height: 100vh;
@@ -87,6 +88,8 @@
 	height: 950px;
 }
 #button-boxes {
+	display: flex;
+	flex-direction: column;
 	width: 226px;
 }
 .e-b-b {
@@ -143,6 +146,7 @@ h5 {
 }
 .emp-content-inside {
 	margin-left: 1px;
+	
 	width: 100%;
 	overflow: hidden;
 }
@@ -160,28 +164,35 @@ h5 {
 #employment-content {
 	text-align: left;
 	width: 90%;
-	height: 100%;
-	
+	height: 100%;	
 }
 #one {
 	margin-top: 30px;
 	font-size: 1rem;
 	line-height: 1.3rem;
-	letter-spacing: 0.1rem;
-
-	
+	letter-spacing: 0.1rem;	
 }
 #button-boxes {
-	display:flex;
-	
+	width: 100%;
+}
+.row-button1 {
+	display: flex;
+	flex-direction: row;
+}
+.row-button2 {
+	display: flex;
+	flex-direction: row;
 }
   .e-b-b {
+	width: 220px;
 	text-align: center;
 	height: 60px;
 	background-image: url(../images/tinybutton.png);
 	font-size: 1rem; 
 	color: whitesmoke;
-	
+	background-repeat: no-repeat; 
+	background-position: center;
+	background-size: cover;
 }
 .e-b-b h4 {
 	font-size: 0;
