--- a/resources/css/education.css
+++ b/resources/css/education.css
@@ -170,7 +170,10 @@
 	border-bottom: 5px solid #000;
 	color: #000;
 }
-@media (max-width: 1170px){
+
+
+
+@media (max-width: 570px){
 	.cert-content-box {
 		margin-left: auto;
 		margin-right: auto;
@@ -178,15 +181,29 @@
 		overflow-x: hidden;
 	}
 	.cert-content-inside {
-		width: 98%;
-		margin-left: 5px;
-		margin-right: 5px;
+		width: 100%;
+		margin-left: 1px;
+		margin-right: 1px;
+	}
+	.cert-button-box {
+		width: 104%;
+		margin-left: -10px;
+	}
+	.cert-button-in {
+		width: 100%;
+	}
+	.cert-content-panel1 {
+		width: 10px;
 	}
 	#cert-title h3 {
 		font-size: 1.4rem;
 	}
+	.cert-content-box-bottom {
+		width: 104%;
+		margin-left: -10px;
+	  }
 	.cert-content-text-bottom {
-		width: 750px;
+		width: 104%;
 		justify-content: center;
 		overflow-x: hidden;
 	  }
@@ -210,7 +227,8 @@
 		color: #758594;
 	}
 	#image1 {
-		width: 100%;
+		width: 102%;
+		margin-left: -5px;
 	}
 	} 
 
