--- a/resources/css/education.css
+++ b/resources/css/education.css
@@ -78,7 +78,12 @@
 	font-weight: 600;
 	text-align: center;
 }
-
+#cert-back:hover {
+	box-shadow: 0 0.4rem 1.4rem 0 rgb(3, 32, 255);
+	cursor: pointer;
+	transform: translate(-0.2rem);
+	transition: transform 150ms;
+}
   
 .cert-button-box{
 	width: 100%;
