--- a/Quiz/gameOne.css
+++ b/Quiz/gameOne.css
@@ -49,7 +49,7 @@ p {
 /* UTILITIES */
 
 .container {
-	width: 100%;
+	width: 100vw;
 	height: 100vh;
 	background-color:rgba(2, 24, 33, 0.546) ;
 	background-repeat: no-repeat; 
